--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>M4 Challenge</title>
   </head>
   <body>
-    <script src="index.js"></script>
-
-    <script src="/s"></script>
+    <script src="/index.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
