--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>M4 Challenge</title>
+    <title>Console-Finances</title>
   </head>
   <body>
+    <h1>Open console to see logs.</h1>
     <script src="/index.js"></script>
     <script src="/script.js"></script>
   </body>
