--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1>Open console to see logs.</h1>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/script.js"></script>
+
+    <script src="./index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
